--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
     <section class="buy">
       <h2 class="visually-hidden">Оформление покупки</h2>
 
-      <form action="/" method="post">
+      <form
+        method="post"
+        enctype="multipart/form-data"
+        action=""
+        autocomplete="off">
         <section class="goods">
           <div class="goods__wrap container">
             <h2 class="group-title goods__title" id="basket">Твои покупки</h2>
@@ -180,12 +184,12 @@
                 </li>
 
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="tel" id="contact-data__tel" placeholder="Телефон">
+                  <input type="tel" class="text-input__input" name="tel" id="contact-data__tel" placeholder="Телефон">
                   <label for="contact-data__tel" class="text-input__label">Телефон</label>
                 </li>
 
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="email" id="contact-data__email" placeholder="Почта">
+                  <input type="email" class="text-input__input" name="email" id="contact-data__email" placeholder="Почта">
                   <label for="contact-data__email" class="text-input__label">Почта</label>
                 </li>
 
@@ -215,7 +219,7 @@
                 <div class="payment__inputs">
                   <div class="payment__card-group">
                     <p class="text-input text-input--light payment__input-wrap payment__input-wrap--card-number">
-                      <input type="text" class="text-input__input" name="card-number" id="payment__card-number" placeholder="Номер карты">
+                      <input type="number" class="text-input__input" name="card-number" id="payment__card-number" placeholder="Номер карты">
                       <label class="text-input__label" for="payment__card-number">Номер карты</label>
                     </p>
 
