--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         method="post"
         enctype="multipart/form-data"
         action=""
-        autocomplete="off">
+        autocomplete="off" class="form-order">
         <section class="goods">
           <div class="goods__wrap container">
             <h2 class="group-title goods__title" id="basket">Твои покупки</h2>
@@ -184,12 +184,12 @@
                 </li>
 
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="tel" id="contact-data__tel" placeholder="Телефон" required>
+                  <input type="tel" class="text-input__input" name="tel" id="contact-data__tel" placeholder="Телефон" required>
                   <label for="contact-data__tel" class="text-input__label">Телефон</label>
                 </li>
 
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="email" id="contact-data__email" placeholder="Почта" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                  <input type="e-mail" class="text-input__input" name="email" id="contact-data__email" placeholder="Почта" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                   <label for="contact-data__email" class="text-input__label">Почта</label>
                 </li>
 
