Добавила разблок формы при добавлении товара в корзину

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
               <ul class="contact-data__inputs">
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="name" id="contact-data__name" placeholder="Имя" required>
+                  <input type="text" class="text-input__input" name="name" id="contact-data__name" placeholder="Имя" required onblur="validate(this)">
                   <label for="contact-data__name" class="text-input__label">Имя</label>
                 </li>
 
