--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <form
         method="post"
         enctype="multipart/form-data"
-        action=""
+        action="https://js.dump.academy/candyshop"
         autocomplete="off" class="form-order">
         <section class="goods">
           <div class="goods__wrap container">
@@ -179,7 +179,7 @@
 
               <ul class="contact-data__inputs">
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="name" id="contact-data__name" placeholder="Имя" required onblur="validate(this)">
+                  <input type="text" class="text-input__input" name="name" id="contact-data__name" placeholder="Имя" required>
                   <label for="contact-data__name" class="text-input__label">Имя</label>
                 </li>
 
