--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
               <button class="range__btn range__btn--right" type="button">правый ползунок</button>
             </div>
             <div class="range__prices">
-              <span class="range__price range__price--min">60</span>
-              <span class="range__price range__price--max">230</span>
+              <span class="range__price range__price--min">15</span>
+              <span class="range__price range__price--max">85</span>
             </div>
           </section>
 
@@ -483,9 +483,10 @@
   <template id="empty-filters">
     <div class="catalog__empty-filter">
       <p><b>Хм... Что-то ты перемудрил с фильтрами.</b></p>
-      <p>Попробуй ещё раз, нажав <span class="catalog__show-all">«Показать всё»</span> или посмотри что мы предлагаем тебе попробовать.</p>
+      <p>Попробуй ещё раз, нажав <span class="catalog__show-all" tabindex ="0">«Показать всё»</span> или посмотри что мы предлагаем тебе попробовать.</p>
     </div>
   </template>
+  <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/data.js"></script>
   <script src="js/catalog.js"></script>
