Исправила все по npm test, осталось 4 ошибки

--- a/index.html
+++ b/index.html
@@ -486,6 +486,7 @@
       <p>Попробуй ещё раз, нажав <span class="catalog__show-all" tabindex ="0">«Показать всё»</span> или посмотри что мы предлагаем тебе попробовать.</p>
     </div>
   </template>
+  <script src="js/disable.js"></script>
   <script src="js/close.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
