Отформатировала код, ошибок нет

--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
 
               <ul class="contact-data__inputs">
                 <li class="text-input contact-data__input-wrap">
-                  <input type="text" class="text-input__input" name="name" id="contact-data__name" placeholder="Имя" required>
+                  <input type="text" class="text-input__input" name="name" id="contact-data__name" placeholder="Имя" minlength="2" maxlength="40" required>
                   <label for="contact-data__name" class="text-input__label">Имя</label>
                 </li>
 
                 <li class="text-input contact-data__input-wrap">
-                  <input type="tel" class="text-input__input" name="tel" id="contact-data__tel" placeholder="Телефон" required>
+                  <input type="tel" class="text-input__input" name="tel" id="contact-data__tel" placeholder="Телефон" minlength="12" required>
                   <label for="contact-data__tel" class="text-input__label">Телефон</label>
                 </li>
 
